style.css
.playfair-display {
  font-family: "Playfair Display", serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

html, body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Playfair Display';
}

.container{
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.header {
    font-size: 18px;
    font-weight: 700;
    color: white;
    background-color: #1f2937;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.logo {
    font-size: 24px;
    font-weight: 900;
    color: #f9faf8;
    
}

.header-links {
    font-size: 18px;
    font-weight: 500;
    color: #e5e7eb;
}
.header-links ul {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
    gap: 12px;
}

.hero-section {
    font-size: 18px;
    font-weight: 700;
    color: white;
    background-color: #1f2937;
    
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
    min-height: 65vh;
    min-height: 65dvh;
    padding: 25px;
    padding-left: 200px;
    padding-right: 200px;
    max-width:;
    height: 250px;
}
.hero-one {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    flex: 1;
    gap: 15px;
}

.hero-heading {
    flex: 1;
    font-size: 48px;
    font-weight: 900;
    color: #f9faf8;
}

.hero-body {
    flex: 1;
    font-size: 18px;
    font-weight: 400;
    color: #e5e7eb;
}
.hero-sign-up {
    flex: 1;
    font-size: 18px;
    font-weight: 600;
    background-color: #3882f6;
    padding: 15px;
    width: 150px;
    border-radius: 8px;
}

.hero-two {
    flex: 1;
    justify-content: center;
    align-items: center;
}
.hero-image img {
    max-width: 100%;
    height: auto;
}

.info-panel {
    font-size: 18px;
    font-weight: 400;
    background-color: white;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 20px;
    min-height: 40vh;
    min-height: 40dvh;
    height: fit-content;
    padding: 25px;
}

.info-box-container{
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    flex: 1;
    gap: 20px;
}

.info-heading {
    font-size: 36px;
    font-weight: 900;
    text-align: center;
    color: #1f2937;
}

.info-box {
    text-align: center;

    display: flex;
    flex: 1;
    flex-direction: column;
    justify-content: center;
    min-width: 165px;
    max-width: 15%;
    height: auto;
    max-height: 200px;
    margin: 0%;
}

.testimonial {
    background-color: #e5e7eb;

    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 40vh;
    min-height: 40dvh;
    padding: 40px;
    gap: 20px;
    
}

.quote {
    font-family: serif;
    font-size: 36px;
    font-weight: 800;
    font-style: italic;
    text-align: justify;
    padding-left: 10%;
    padding-right: 10%;
}

.author {
    font-size: 24px;
    font-weight: 700;

    align-self: flex-end;
    padding-right: 10%;
}

.call-to-action {
    background-color: #f9faf8;
    min-height: 20vh;
    min-height: 20dvh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.c2a-container {
    background-color: #3882f6;
    border-radius: 8px;
    min-width: 65%;
    max-width: 85%;
    padding: 25px;
    display: flex;
    justify-content: space-around;
    align-items: center;

}

.c2a-text-container {
    color: #f9faf8;
    display: flex;
    flex-direction: column;
}

.c2a-text {
    font-size: 24px;
    font-weight: 700;
}

.c2a-signup {
    font-weight: 700;
    color: #f9faf8;
    background-color: transparent;
    border-color: #f9faf8;
    border-radius: 8px;
    width: 10em;
    padding: 10%;
}

li {
    list-style-type: none;
}
a {
    text-decoration: none;
    color: white;
}

